# tnia-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_pypi.md  STARDISTLICENSE.txt  _config.yml  index.html  setup.cfg  setup.py
_includes/: head.html  menu  scripts  section  section-end
_includes/layout/: statbox
_includes/statbox/: row  team-members
_layouts/: basic.html
assets/css/: dock.css  home.css  includes.css  layout.scss  links.css  main.css  noscript.css  page.css  syntax-highlight-fruity.css  timeline.sass
assets/js/: cite.js  code.js  dock.js  imjoy-app.js  jquery.toc.js  lightbox.min.js  lunr.js  main.js  maven.js  search-tweaks.js  search.js  search.js.map  util.js
css/: main.css
docs/: about.md  contact.md  install.md  nolayout.md
docs/3rdpartytools/: boost.md  cuda.md  inteloneapi.md  opencv.md
docs/Python/: BestPractices.md  IndexingHints.md  NotebookHints.md  pytest.md
docs/commandline/: bashgeneral.md  grep.md  ubuntu.md
docs/documentation/: mkdocs.md
docs/java/: javacpp.md  maven.md
docs/machinesetup/: aws_mac_vm.md  deconvolution_dl_nvidia_linux.md  deconvolution_dl_nvidia_windows.md
docs/napari/: plugins.md
docs/native/: linux_troubleshooting.md
docs/packaging/: conda.md  packaging.md  pip_conda_export_env.md
docs/tests/: abrf.md  test.md
docs/vscode/: cmake.md  keyboardshortcuts.md  (+1 more)
images/: star.tif
notebooks_/: extract_psf.md
presentations/: GPU.odp  GPU.pptx  GPUNewest.ppt  bnorthanGPU.ppt
tests/: first_test.py  helper.py  test_add_small_to_large.py  test_augmentation.py  test_projections.py
(+684 files in other folders)
