[metadata]
name=tnia-python
version=0.1.19
description=A collection of utilities
url=http://github.com/tnia/tnia-python
author=Brian Northan
author_email=bnorthan@gmail.com
license=MIT

[options]
packages=find:
#install_requires=['napari-plugin-engine','SimpleITK-SimpleElastix', 'pyclesperanto-prototype', 'napari[all]','rawpy','python-bioformats'],
zip_safe=False

[options.entry_points]
napari.manifest =
    tnia-python = tnia.napari:napari.yaml
