[metadata]
name=tnia-python
version=0.1.26
description=A collection of utilities
long_description = file: README_pypi.md
long_description_content_type = text/markdown
url=http://github.com/tnia/tnia-python
author=Brian Northan
author_email=bnorthan@gmail.com
license=MIT

[options]
packages=find:
include_package_data = True
install_requires=
    albumentations
    matplotlib
    scipy
    tifffile
    raster-geometry
zip_safe=False

[options.exclude_package_data]
* = notebooks/*
    images/*
    presentations/*

